--- a/lliira-bookworm-core/pom.xml
+++ b/lliira-bookworm-core/pom.xml
@@ -42,5 +42,9 @@
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-context</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-jdbc</artifactId>
+  	</dependency>
   </dependencies>
 </project>
