--- a/lliira-bookworm-calibre/pom.xml
+++ b/lliira-bookworm-calibre/pom.xml
@@ -28,12 +28,13 @@
 			<artifactId>mybatis</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis-spring</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
+		</dependency>
+		<dependency>
+		  <groupId>net.lliira.bookworm</groupId>
+		  <artifactId>lliira-bookworm-core</artifactId>
+		  <version>${parent.version}</version>
 		</dependency>
 	</dependencies>
 </project>
